--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ anyhow = "1.0.79"
 either = "1.9.0"
 itertools = "0.12.0"
 lsp-types = "0.94.1"
+serde = "1.0.195"
+serde_json = "1.0.111"
 starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git" }
 starlark_lsp = { git = "https://github.com/facebookexperimental/starlark-rust.git" }
 thiserror = "1.0.56"
