--- a/fixtures/bzlmod/root/BUILD
+++ b/fixtures/bzlmod/root/BUILD
@@ -3,4 +3,5 @@ load("@rules_rust//rust:defs.bzl", "rust_binary")
 rust_binary(
     name = "main",
     srcs = ["main.rs"],
+    deps = ["@rules_ru"]
 )
