--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+clap = { version = "4.4.18", features = ["derive"] }
 either = "1.9.0"
 itertools = "0.12.0"
 lsp-types = "0.94.1"
