feat: Use a distinct output base for querying
Bazel holds a lock per output base, so any concurrent builds will block language features that need queries, such as autocomplete. This issue is avoided by using a different output base for queries, as recommended in the [bazel docs](https://bazel.build/run/scripts#output-base-option).

Fixes #3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ itertools = "0.12.0"
 lsp-types = "0.94.1"
 starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git" }
 starlark_lsp = { git = "https://github.com/facebookexperimental/starlark-rust.git" }
+tempfile = "3.9.0"
 thiserror = "1.0.56"
