build: Use bazel for building and testing
Since we are a tool for bazel, it would be nice to use bazel for building.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Check
-      run: cargo check --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Build & Test
+      run: bazel test //...
