--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "4.4.18", features = ["derive"] }
 either = "1.9.0"
 itertools = "0.12.0"
 lsp-types = "0.94.1"
-starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git" }
-starlark_lsp = { git = "https://github.com/facebookexperimental/starlark-rust.git" }
+starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
+starlark_lsp = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
 tempfile = "3.9.0"
 thiserror = "1.0.56"
