feat: Add autocomplete for bazel builtins
This implements the function `get_environment` on `LspContext`. This reads the a protobuf file generated by bazel that contains all the builtins. This does not include things like `cc_library`. Further investigation is needed on how to obtain these. Type information could be generated better too, but this will happen in a follow-up.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -19,8 +19,22 @@ crate.from_cargo(
 )
 use_repo(crate, "crates")
 
+crate.annotation(
+    crate = "protoc-gen-prost",
+    gen_binaries = ["protoc-gen-prost"],
+)
+
+crate.annotation(
+    crate = "protoc-gen-tonic",
+    gen_binaries = ["protoc-gen-tonic"],
+)
+
 bazel_dep(
     name = "rules_bazel_integration_test",
     version = "0.23.0",
     dev_dependency = True,
 )
+
+bazel_dep(name = "protobuf", version = "23.1")
+
+register_toolchains("//prost:prost_toolchain")
