--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -27,7 +27,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build & Test
-        run: bazel test //... -c opt
+        run: |
+          cargo --version
+          bazel test //... -c opt
       - uses: actions/upload-artifact@v4
         with:
           name: bazel-lsp-${{ matrix.target.name }}${{ matrix.target.extension }}
