--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -16,9 +16,9 @@ jobs:
           - name: linux-amd64
             runs-on: ubuntu-20.04
             extension: ""
-          - name: windows-amd64
-            runs-on: windows-2019
-            extension: .exe
+          # - name: windows-amd64
+          #   runs-on: windows-2019
+          #   extension: .exe
           - name: osx-amd64
             runs-on: macos-11
             extension: ""
