--- a/.bazelrc
+++ b/.bazelrc
@@ -2,3 +2,8 @@
 # `bazel run @rules_bazel_integration_test//tools:update_deleted_packages`
 build --deleted_packages=fixtures/simple/output_base/external/bar,fixtures/simple/output_base/external/foo,fixtures/simple/root,fixtures/simple/root/foo
 query --deleted_packages=fixtures/simple/output_base/external/bar,fixtures/simple/output_base/external/foo,fixtures/simple/root,fixtures/simple/root/foo
+
+build:ci --bes_results_url=https://bazel-lsp.buildbuddy.io/invocation/
+build:ci --bes_backend=grpcs://bazel-lsp.buildbuddy.io
+build:ci --remote_cache=grpcs://bazel-lsp.buildbuddy.io
+build:ci --remote_timeout=3600
