--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,10 +26,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Authenticate with buildbuddy
+        env:
+          BUILDBUDDY_API_KEY: ${{ secrets.BUILDBUDDY_API_KEY }}
+        run: |
+          echo "build:ci --remote_header=x-buildbuddy-api-key=$BUILDBUDDY_API_KEY" >> ~/.bazelrc
       - name: Build & Test
         run: |
-          cargo --version
-          bazel test //... -c opt
+          bazel test //... -c opt --config=ci
       - uses: actions/upload-artifact@v4
         with:
           name: bazel-lsp-${{ matrix.target.name }}${{ matrix.target.extension }}
