--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -43,6 +43,7 @@ jobs:
   release:
     if: github.ref == 'refs/heads/master'
     name: Release
+    needs: [build-and-test]
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v4
