--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -22,6 +22,9 @@ jobs:
           - name: osx-amd64
             runs-on: macos-11
             extension: ""
+          - name: osx-arm64
+            runs-on: macos-14
+            extension: ""
       fail-fast: false
 
     steps:
