fix: Update starlark crates
This fixes some issues with autocomplete popups being too sensitive. However, this does not update to the latest commit due to https://github.com/facebookexperimental/starlark-rust/issues/112.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ prost-types = "0.12.3"
 protoc-gen-prost = "0.2.3"
 protoc-gen-tonic = "0.3.0"
 ring = "0.17.7"
-starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
-starlark_lsp = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
+starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git", rev = "cf5e6b8cb8bb364c8c49b67080e510916c502d4b" }
+starlark_lsp = { git = "https://github.com/facebookexperimental/starlark-rust.git", rev = "cf5e6b8cb8bb364c8c49b67080e510916c502d4b" }
 thiserror = "1.0.56"
 tonic = "0.10.2"
