ci: Checkout git repo in release pipeline

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -54,6 +54,8 @@ jobs:
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           release-type: rust
+      - uses: actions/checkout@v4
+        if: ${{ steps.release.outputs.release_created }}
       - uses: actions/download-artifact@v4
         if: ${{ steps.release.outputs.release_created }}
         with:
