--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ prost-types = "0.12.3"
 protoc-gen-prost = "0.2.3"
 protoc-gen-tonic = "0.3.0"
 ring = "0.17.7"
+serde = "1.0.195"
+serde_json = "1.0.111"
 starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
 starlark_lsp = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
 thiserror = "1.0.56"
