--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -47,7 +47,7 @@ jobs:
         if: runner.os == 'Windows'
       - uses: actions/upload-artifact@v4
         with:
-          name: bazel-lsp-${{ matrix.target.name }}${{ matrix.target.extension }}
+          name: bazel-lsp-${{ matrix.target.name }}
           path: bazel-bin/bazel-lsp${{ matrix.target.extension }}
   release:
     if: github.ref == 'refs/heads/master'
