--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -34,13 +34,14 @@ jobs:
           BUILDBUDDY_API_KEY: ${{ secrets.BUILDBUDDY_API_KEY }}
         run: |
           echo "build:ci --remote_header=x-buildbuddy-api-key=$BUILDBUDDY_API_KEY" >> ~/.bazelrc
-      - name: Build & Test
+        shell: bash
+      - name: Build & Test (bash)
         run: |
           INVOCATION_ID="$(uuidgen)"
           echo "[View on BuildBuddy](https://bazel-lsp.buildbuddy.io/invocation/$INVOCATION_ID)" >> $GITHUB_STEP_SUMMARY
           bazel test //... -c opt --config=ci --invocation_id="$INVOCATION_ID"
         if: runner.os != 'Windows'
-      - name: Build & Test
+      - name: Build & Test (powershell)
         run: |
           $InvocationId = New-Guid
           bazel test //... -c opt --config=ci --invocation_id="$InvocationId"
