--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build & Test (powershell)
         run: |
           $InvocationId = New-Guid
-          bazel test //... -c opt --config=ci --invocation_id="$InvocationId"
+          bazel --output_base=C:/b test //... -c opt --config=ci --invocation_id="$InvocationId"
         if: runner.os == 'Windows'
       - uses: actions/upload-artifact@v4
         with:
