--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -61,7 +61,7 @@ jobs:
           pattern: bazel-lsp-*
       - name: Rename artifacts
         run: |
-          VERSION=${{ steps.release.outputs.major || 0 }}.${{ steps.release.outputs.minor || 0 }}.${{ steps.release.outputs.patch || 0 }}
+          version=${{ steps.release.outputs.major || 0 }}.${{ steps.release.outputs.minor || 0 }}.${{ steps.release.outputs.patch || 0 }}
           files="$(find releases -type f)"
           for file in $files; do
             basename="$(basename $file)"
@@ -70,8 +70,6 @@ jobs:
             mv "$file" "${dirname/bazel-lsp-/bazel-lsp-${version}-}${extension}"
           done
       - name: Show Release Artifacts
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
         run: find releases -type f
       - name: Upload Release Artifacts
         if: ${{ steps.release.outputs.release_created }}
