--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -34,11 +34,11 @@ jobs:
           BUILDBUDDY_API_KEY: ${{ secrets.BUILDBUDDY_API_KEY }}
         run: |
           echo "build:ci --remote_header=x-buildbuddy-api-key=$BUILDBUDDY_API_KEY" >> ~/.bazelrc
-          echo "startup --output_base=$HOME/.bazel/output_base" >> ~/.bazelrc
+          echo "startup --output_base=$RUNNER_TEMP/.bazel/output_base" >> ~/.bazelrc
       - uses: actions/cache@v4
         with:
           path: |
-            ${{ env.HOME }}/.bazel/output_base/external
+            ${{ runner.temp }}/.bazel/output_base/external
           key: bazel-${{ runner.os }}-${{ github.ref }}
           restore-keys:
             bazel-${{ runner.os }}-master
