--- a/src/builtin/BUILD
+++ b/src/builtin/BUILD
@@ -1,19 +1,20 @@
-# Copied from: https://github.com/bazelbuild/bazel/blob/master/src/main/protobuf/BUILD
-
-load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")
 
-proto_library(
-    name = "builtin_proto",
-    srcs = ["builtin.proto"],
+rust_prost_library(
+    name = "build_proto_rust",
+    proto = "@bazel_tools//src/main/protobuf:build_proto",
+    visibility = ["//visibility:public"],
 )
 
 rust_prost_library(
     name = "builtin_proto_rust",
-    proto = ":builtin_proto",
+    proto = "@bazel_tools//src/main/protobuf:builtin_proto",
     visibility = ["//visibility:public"],
 )
 
-# Built from the bazel repo using:
-# `bazel build //src/main/java/com/google/devtools/build/lib:gen_api_proto`
-exports_files(["builtin.pb"])
+exports_files([
+    # Built from the bazel repo using:
+    # `bazel build //src/main/java/com/google/devtools/build/lib:gen_api_proto`
+    "builtin.pb",
+    "default_build_language.pb",
+])
