Set version from Cargo.toml
This uses a genrule to read the Cargo.toml and set `CARGO_PKG_VERSION`. This is picked up by clap to set the version when asked via `--version`.

Fixes #39

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,6 +8,10 @@ rust.toolchain(
 use_repo(rust, "rust_toolchains")
 register_toolchains("@rust_toolchains//:all")
 
+rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
+
+use_repo(rust_host_tools, "rust_host_tools")
+
 crate = use_extension(
     "@rules_rust//crate_universe:extension.bzl",
     "crate",
