Using hermetic linux C++ toolchain.
This allows to reproducible builds as it uses specific version of C++
compiler and glibc instead of using system ones.

Under linux using the oldest supported version of glibc by Rust (2.17),
this should allow user on some older platforms to use this repo right
away, see e.g. https://github.com/cameron-martin/bazel-lsp/issues/38,
with this change the bazel-lsp binary starts in docker image centos:7

Not supporting Windows yet, it does not compile google abseil under
Widows (there is prost -> protoc -> abseil dep). Bug on zig side:
https://github.com/ziglang/zig/issues/10989

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+cc = "1.1.13"
 clap = { version = "4.4.18", features = ["derive"] }
 either = "1.9.0"
 hex = "0.4.3"
@@ -23,3 +24,10 @@ starlark = { git = "https://github.com/facebook/starlark-rust.git", branch = "ma
 starlark_lsp = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
 thiserror = "1.0.56"
 tonic = "0.10.2"
+
+[patch.crates-io]
+# Release v1.1.13 of https://github.com/rust-lang/cc-rs/releases/tag/cc-v1.1.13
+# patched with support for *-unknown-linux-gnu targets.
+# Patch://github.com/Asana/cc-rs/commit/3cd7c687771196bd2e5d36e5446bfcfa801c08ef
+# Zig bug: https://github.com/ziglang/zig/issues/4911
+cc = { git = "https://github.com/Asana/cc-rs.git", commit = "3cd7c687771196bd2e5d36e5446bfcfa801c08ef" }
