ci: Make buildbuddy results public

--- a/.bazelrc
+++ b/.bazelrc
@@ -12,6 +12,7 @@ build:ci --bes_backend=grpcs://bazel-lsp.buildbuddy.io
 build:ci --bes_upload_mode=nowait_for_upload_complete
 build:ci --remote_cache=grpcs://bazel-lsp.buildbuddy.io
 build:ci --remote_timeout=3600
+build:ci --build_metadata=VISIBILITY=PUBLIC
 
 # Configuration required by https://github.com/uber/hermetic_cc_toolchain
 build:linux --sandbox_add_mount_pair=/tmp
