--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -16,9 +16,9 @@ jobs:
           - name: linux-amd64
             runs-on: ubuntu-20.04
             extension: ""
-          # - name: windows-amd64
-          #   runs-on: windows-2019
-          #   extension: .exe
+          - name: windows-amd64
+            runs-on: windows-2019
+            extension: .exe
           - name: osx-amd64
             runs-on: macos-13
             extension: ""
@@ -29,27 +29,47 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up bazelrc
+      - name: Set up buildbuddy
         env:
           BUILDBUDDY_API_KEY: ${{ secrets.BUILDBUDDY_API_KEY }}
         run: |
           echo "build:ci --remote_header=x-buildbuddy-api-key=$BUILDBUDDY_API_KEY" >> ~/.bazelrc
-          echo "startup --output_base=$RUNNER_TEMP/.bazel/output_base" >> ~/.bazelrc
+        shell: bash
+      - name: Set up output base
+        run: |
+          OUTPUT_BASE=$RUNNER_TEMP/.bazel/output_base
+          echo "startup --output_base=$OUTPUT_BASE" >> ~/.bazelrc
+          echo "OUTPUT_BASE=$OUTPUT_BASE" >> "$GITHUB_ENV"
+        shell: bash
+        if: runner.os != 'Windows'
+      - name: Set up output base
+        run: |
+          OUTPUT_BASE=C:/b
+          echo "startup --output_base=$OUTPUT_BASE" >> ~/.bazelrc
+          echo "OUTPUT_BASE=$OUTPUT_BASE" >> "$GITHUB_ENV"
+        shell: bash
+        if: runner.os == 'Windows'
       - uses: actions/cache@v4
         with:
           path: |
-            ${{ runner.temp }}/.bazel/output_base/external
+            ${{ env.OUTPUT_BASE }}/external
           key: bazel-${{ matrix.target.name }}-${{ github.ref }}
           restore-keys:
             bazel-${{ matrix.target.name }}-refs/heads/master
-      - name: Build & Test
+      - name: Build & Test (bash)
         run: |
           INVOCATION_ID="$(uuidgen)"
           echo "[View on BuildBuddy](https://bazel-lsp.buildbuddy.io/invocation/$INVOCATION_ID)" >> $GITHUB_STEP_SUMMARY
           bazel test //... -c opt --config=ci --invocation_id="$INVOCATION_ID"
+        if: runner.os != 'Windows'
+      - name: Build & Test (powershell)
+        run: |
+          $InvocationId = New-Guid
+          bazel test //... -c opt --config=ci --invocation_id="$InvocationId"
+        if: runner.os == 'Windows'
       - uses: actions/upload-artifact@v4
         with:
-          name: bazel-lsp-${{ matrix.target.name }}${{ matrix.target.extension }}
+          name: bazel-lsp-${{ matrix.target.name }}
           path: bazel-bin/bazel-lsp${{ matrix.target.extension }}
   release:
     name: Release
