--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde = "1.0.195"
 serde_json = "1.0.111"
 starlark = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
 starlark_lsp = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
+starlark_syntax = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
 thiserror = "1.0.56"
 tonic = "0.10.2"
 
