--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ cc = "1.1.13"
 clap = { version = "4.4.18", features = ["derive"] }
 either = "1.9.0"
 hex = "0.4.3"
+htmd = "0.1.6"
 itertools = "0.12.0"
 lsp-types = "0.94.1"
+once_cell = "1.20.2"
 prost = "0.12.3"
 prost-types = "0.12.3"
 protoc-gen-prost = "0.2.3"
