chore: replaced pb files with pbtxt
The binary .pb files are now generated during build and embedded as
previously in the binary itself. But repo contains text proto versions
of the files.

This provides more transparency about what is built into the binary
itself, and more visibility into what PRs change around those files
(for more informed reviews as well as less security concerns).

--- a/src/builtin/BUILD
+++ b/src/builtin/BUILD
@@ -12,11 +12,46 @@ rust_prost_library(
     visibility = ["//visibility:public"],
 )
 
-exports_files([
-    # Built from the bazel repo using:
-    # `bazel build //src/main/java/com/google/devtools/build/lib:gen_api_proto`
-    "builtin.pb",
-    # Obtained from bazel instance with:
-    # `bazel info build-language`
-    "default_build_language.pb",
-])
+# The pbtxt file can be obtained from bazel instance:
+# bazel info build-language | protoc --decode=blaze_query.BuildLanguage --proto_path <BAZEL_REPO> src/main/protobuf/build.proto > default_build_language.pbtxt
+genrule(
+    name = "default_build_language_pbtxt_to_pb",
+    srcs = [
+        ":default_build_language.pbtxt",
+    ],
+    outs = ["default_build_language.pb"],
+    tools = [
+        "@protobuf//:protoc",
+        "@bazel_tools//src/main/protobuf:build_proto",
+    ],
+    cmd = "cat $(execpath :default_build_language.pbtxt) | " +
+        "$(execpath @protobuf//:protoc) " +
+        "--encode=blaze_query.BuildLanguage " +
+        "--deterministic_output " +
+        "--descriptor_set_in=$(execpath @bazel_tools//src/main/protobuf:build_proto) " +
+        "> $@",
+    visibility = ["//visibility:public"],
+)
+
+# The pbtxt file can be obtained from within bazel repository:
+#
+# bazel build src/main/java/com/google/devtools/build/lib:gen_api_proto
+# cat bazel-bin/src/main/java/com/google/devtools/build/lib/builtin.pb | protoc --decode=builtin.Builtins --proto_path src/main/protobuf builtin.proto > builtin.pbtxt
+genrule(
+    name = "builtin_pbtxt_to_pb",
+    srcs = [
+        ":builtin.pbtxt",
+    ],
+    outs = ["builtin.pb"],
+    tools = [
+        "@protobuf//:protoc",
+        "@bazel_tools//src/main/protobuf:builtin_proto",
+    ],
+    cmd = "cat $(execpath :builtin.pbtxt) | " +
+        "$(execpath @protobuf//:protoc) " +
+        "--encode=builtin.Builtins " +
+        "--deterministic_output " +
+        "--descriptor_set_in=$(execpath @bazel_tools//src/main/protobuf:builtin_proto) " +
+        "> $@",
+    visibility = ["//visibility:public"],
+)
