--- a/.bazelrc
+++ b/.bazelrc
@@ -28,3 +28,6 @@ build:linux --action_env BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 
 # Do not leak local envs into actions, esp. PATH variable.
 build --incompatible_strict_action_env
+
+# Allow isolation of the "crate" extension in the root repo
+common --experimental_isolated_extension_usages
