--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ cc = "1.1.13"
 clap = { version = "4.4.18", features = ["derive"] }
 either = "1.9.0"
 hex = "0.4.3"
+htmd = "0.1.6"
 itertools = "0.12.0"
 lsp-types = "0.94.1"
 prost = "0.12.3"
