chore(renovate): Group together protoc-gen-* crates

--- a/renovate.json
+++ b/renovate.json
@@ -10,5 +10,10 @@
   ],
   "ignorePaths": [
     "fixtures/"
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": ["protoc-gen-*"]
+    }
   ]
 }
