chore(renovate): Use matchSourceUrls
This is what the renovate monorepo presets use, according to the docs

--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,8 @@
   ],
   "packageRules": [
     {
-      "matchPackageNames": ["protoc-gen-*"]
+      "matchSourceUrls": ["https://github.com/neoeinstein/protoc-gen-prost"],
+      "groupName": "protoc-gen crates"
     }
   ]
 }
