--- a/src/builtin/BUILD
+++ b/src/builtin/BUILD
@@ -16,7 +16,7 @@ rust_prost_library(
 
 rust_prost_library(
     name = "builtin_proto_rust",
-    proto = "@bazel_tools//src/main/protobuf:builtin_proto",
+    proto = ":builtin_proto",
     visibility = ["//visibility:public"],
 )
 
