Update bazel lock file after running renovate.

--- a/renovate.json
+++ b/renovate.json
@@ -16,5 +16,11 @@
       "matchSourceUrls": ["https://github.com/neoeinstein/protoc-gen-prost"],
       "groupName": "protoc-gen crates"
     }
-  ]
+  ],
+  "postUpgradeTasks": {
+    "commands": [
+        "bazel mod deps"
+    ],
+    "executionMode": "branch"
+  }
 }
