chore(deps): Update all dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,4 +34,4 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 # patched with support for *-unknown-linux-gnu targets.
 # Patch://github.com/Asana/cc-rs/commit/3cd7c687771196bd2e5d36e5446bfcfa801c08ef
 # Zig bug: https://github.com/ziglang/zig/issues/4911
-cc = { git = "https://github.com/Asana/cc-rs.git", commit = "3cd7c687771196bd2e5d36e5446bfcfa801c08ef" }
+cc = { git = "https://github.com/Asana/cc-rs.git", branch = "main" }
