--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -22,6 +22,13 @@ crate.from_cargo(
     name = "crates",
     cargo_lockfile = "Cargo.lock",
     manifests = ["Cargo.toml"],
+    supported_platform_triples = [
+        "aarch64-apple-darwin",
+        "aarch64-unknown-linux-gnu",
+        "x86_64-apple-darwin",
+        "x86_64-pc-windows-msvc",
+        "x86_64-unknown-linux-gnu",
+    ],
 )
 use_repo(crate, "crates")
 
